--- a/styles/centerDivText.css
+++ b/styles/centerDivText.css
@@ -61,3 +61,28 @@
   height: 80px;
   background-color: cadetblue;
 }
+
+.parent4 {
+  width: 240px;
+  height: 80px;
+  border: 1px solid blueviolet;
+  text-align: center;
+}
+
+.text4 {
+  margin: 0;
+}
+
+.parent5 {
+  width: 300px;
+  height: 100px;
+  border: 2px solid navy;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center; /*add this if the text is very long*/
+}
+
+.text5 {
+  margin: 0;
+}
