--- a/styles/flexContainer.css
+++ b/styles/flexContainer.css
@@ -57,3 +57,90 @@ body {
   border: 1px solid palevioletred;
   /* margin: 5px; */
 }
+
+.container4 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap-reverse;
+}
+
+.container4 div {
+  background-color: lightslategray;
+  width: 60px;
+  height: 60px;
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid goldenrod;
+  /* margin: 5px; */
+}
+
+.container5 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container5 div {
+  background-color: burlywood;
+  width: 90px;
+  height: 60px;
+  font-size: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid plum;
+  /* margin: 5px; */
+}
+
+.container6 {
+  background-color: aquamarine;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.container6 div {
+  background-color: burlywood;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid plum;
+  /* margin: 5px; */
+}
+
+.container6 div:nth-child(2) {
+  height: 80px;
+}
+
+.container6 div:nth-child(3) {
+  height: 30px;
+}
+
+.container7 {
+  background-color: aquamarine;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-content: space-around;
+  flex-wrap: wrap;
+}
+
+.container7 div {
+  background-color: burlywood;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid plum;
+  /* margin: 5px; */
+}
