--- a/styles/cssFlexbox.css
+++ b/styles/cssFlexbox.css
@@ -144,3 +144,99 @@ body {
   border: 1px solid plum;
   /* margin: 5px; */
 }
+
+.container8 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  gap: 6px;
+}
+
+.container8 div {
+  background-color: rgb(151, 232, 104);
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid red;
+  /* margin: 5px; */
+}
+
+.parent {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.parent div {
+  background-color: bisque;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid darkgreen;
+}
+
+#d2 {
+  order: 1;
+}
+
+.parent2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.parent2 div {
+  background-color: bisque;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid darkkhaki;
+}
+
+.parent2 div:nth-child(1),
+.parent2 div:nth-child(3) {
+  flex-grow: 3;
+}
+
+.parent2 div:nth-child(2) {
+  flex-grow: 5;
+}
+
+.parent3 {
+  background-color: lightseagreen;
+  width: 100%;
+  height: 200px;
+  display: flex;
+}
+
+.parent3 div {
+  background-color: lightslategrey;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid darkkhaki;
+}
+
+.parent3 div:nth-child(1) {
+  align-self: center;
+}
+
+.parent3 div:nth-child(2) {
+  align-self: flex-start;
+}
+
+.parent3 div:nth-child(3) {
+  align-self: flex-end;
+}
